Re-organize repo
Created folder structure to keep separated the different milestones.
Knitted the Rmd file for milestone 2
Removed code in chunk to install packages

--- a/Milestone 2/troubleshooting-2.Rmd
+++ b/Milestone 2/troubleshooting-2.Rmd
@@ -17,10 +17,9 @@ Note that errors are not all syntactic (i.e., broken code)! Some are logical err
 
 ```{r}
 ### GRACE FIXED ERROR ###
-install.packages("dslabs")
+### Edited by Marco ###
 library(tidyverse)
 library(stringr)
-install.packages("devtools")
 library(gapminder)
 library(dslabs)
 library(devtools)
